--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha6'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.maps.android:android-maps-utils:0.4'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+
+
 }
 apply plugin: 'com.google.gms.google-services'
